# open-forms

./: README.md  pyproject.toml
apps/accounts/: urls.py
apps/accounts/backends/: __init__.py  auth_backend.py
apps/accounts/forms/: __init__.py  login_form.py  register_form.py
apps/accounts/migrations/: 0001_initial.py  0002_user_created_at_user_updated_at.py
apps/accounts/models/: __init__.py  user.py
apps/accounts/static/style/: auth.css
apps/accounts/templates/accounts/: login-form.html  register-form.html
apps/accounts/views/: __init__.py  login_view.py  register_view.py
apps/api/: urls.py
apps/api/migrations/: 0001_initial.py
apps/api/models/: __init__.py  survey.py
apps/api/serializers/: __init__.py  survey_input_serializer.py  survey_output_serializer.py
apps/api/views/: __init__.py  submission_views.py  submission_viewset.py  survey_viewset.py
apps/engine/: apps.py  urls.py
apps/engine/migrations/: 0001_initial.py
apps/engine/models/: __init__.py  submission.py  survey.py
apps/engine/serializers/: __init__.py  answer_serializer.py  question_serializer.py  submission_input_serializer.py  submission_output_serializer.py  submission_serializer.py  survey_input_serializer.py  survey_output_serializer.py
apps/engine/views/: __init__.py  submission_views.py  survey_views.py
apps/home/: urls.py
apps/home/views/: __init__.py
core/: settings.py  urls.py
global/static/style/: base.css
global/templates/: base.html
global/templates/partials/: _footer.html  _header.html  _logo.html  _menu.html  _nav.html
(+15 files in other folders)
